# customer-service-agent_LaPoste-

./: .env  README.md  agent global.txt  architecture demo.txt  main.py  pyproject.toml  shéma démo.txt  shéma global.txt
app/core/: llm.py
app/graph/: state.py  workflow.py
app/models/: schemas.py
app/rag/: bm25_index.py  embedder.py  faiss_wrapper.py  indexer.py  loaders.py  retriever.py  rrf.py
app/services/: crm_mock.py  ticketing_mock.py
app/ui/: streamlit_app.py  streamlit_app_1.py  streamlit_upload_new.py
data/crm/: customers.json
data/events/calls/: event_006_call.json  evt_009.json
data/events/email_claim/: event_001.json  event_002_simple.json  event_003_critical.json  evt_008_20260518_224608.json
data/events/email_general/: event_004_general.json  event_007_info.json
data/events/forms/: event_005_ticket.json
data/rag_docs/: procedures_colis.md  procedures_courrier.md  reclamations_sla.md
data/runtime/rag/: chunks.jsonl  faiss.index
data/runtime/rag/bm25/: MAIN_r4dab7q8eeujeixf.seg  _MAIN_1.toc
data/tickets/: tickets_seed.json
docs/architecture/: demo-scope.txt
scripts/: run_demo.py
tests/: test_rag.py  test_workflow_email.py
