[project]
name = "la-poste-agent"
version = "0.1.0"
description = "Demo agent LangGraph pour La Poste"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.1",
    "mistralai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.4",
    "whoosh>=2.7.4",
    "numpy>=1.24.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["la_poste_agent"]
